SFUSA/force-app/main/default/objects/Program__c/fields/Brand_Logo__c.field-meta.xml
<CustomField>
        <fullName>Brand_Logo__c</fullName>
        <formula>Brand__r.Logo__c</formula>
        <label>Brand Logo</label>
        <type>Text</type>
    </CustomField>