SFUSA/force-app/main/default/objects/Program__c/fields/BrandName__c.field-meta.xml
<CustomField>
        <fullName>BrandName__c</fullName>
        <formula>Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </CustomField>