SFUSA/force-app/main/default/objects/Program__c/fields/Budget__c.field-meta.xml
<CustomField>
        <fullName>Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>