SFUSA/force-app/main/default/objects/Program__c/fields/ChannelSubType__c.field-meta.xml
<CustomField>
        <fullName>ChannelSubType__c</fullName>
        <label>Channel Sub-Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Channel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>LFL</fullName>
                </value>
                <value>
                    <fullName>Grocery Mass &amp; Drug</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>High End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>