SFUSA/force-app/main/default/objects/Program__c/fields/DistributorName__c.field-meta.xml
<CustomField>
        <fullName>DistributorName__c</fullName>
        <formula>if(OR(ISNULL(Distributor__c),ISBLANK(Distributor__c)),'*No Distributor',Distributor__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Name</label>
        <type>Text</type>
    </CustomField>