SFUSA/force-app/main/default/objects/Program__c/fields/DistributorQuotaDetails__c.field-meta.xml
<CustomField>
        <fullName>DistributorQuotaDetails__c</fullName>
        <label>Distributor Quota Details</label>
        <type>TextArea</type>
    </CustomField>