SFUSA/force-app/main/default/objects/Program__c/fields/Duration__c.field-meta.xml
<CustomField>
        <fullName>Duration__c</fullName>
        <formula>(EndDate__c - StartDate__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>