SFUSA/force-app/main/default/objects/Program__c/fields/EndDate__c.field-meta.xml
<CustomField>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>