SFUSA/force-app/main/default/objects/Program__c/fields/Parent__c.field-meta.xml
<CustomField>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Focus Calendar Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Focus Calendar Local Priority, Focus Calendar National Priority</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Related Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </CustomField>