SFUSA/force-app/main/default/objects/Program__c/fields/ProgramFocus__c.field-meta.xml
<CustomField>
        <fullName>ProgramFocus__c</fullName>
        <label>Program Focus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProgrammingType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>