SFUSA/force-app/main/default/objects/Program__c/fields/Related_Priority__c.field-meta.xml
<CustomField>
        <fullName>Related_Priority__c</fullName>
        <formula>Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Priority</label>
        <type>Text</type>
    </CustomField>