SFUSA/force-app/main/default/objects/Program__c/fields/SalesStrategyDriven__c.field-meta.xml
<CustomField>
        <fullName>SalesStrategyDriven__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the local priority driven from Sales Strategy?</inlineHelpText>
        <label>Sales Strategy Driven</label>
        <type>Checkbox</type>
    </CustomField>