SFUSA/force-app/main/default/objects/Program__c/fields/SourceBICampaign__c.field-meta.xml
<CustomField>
        <fullName>SourceBICampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source BI Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </CustomField>