SFUSA/force-app/main/default/objects/Program__c/fields/SpendDescription__c.field-meta.xml
<CustomField>
        <fullName>SpendDescription__c</fullName>
        <label>Spend Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funds__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Production Costs</fullName>
                </value>
                <value>
                    <fullName>Advanced TV Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>Cinema Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>Consumer Giveaways</fullName>
                </value>
                <value>
                    <fullName>Consumer Magazines Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>Consumer Newspaper Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>Consumer Research</fullName>
                </value>
                <value>
                    <fullName>Creative Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Customer Relations Management</fullName>
                </value>
                <value>
                    <fullName>Digital Display Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Freight and Storage (National POS Only)</fullName>
                </value>
                <value>
                    <fullName>Heritage Center</fullName>
                </value>
                <value>
                    <fullName>Liscensing and Royalty</fullName>
                </value>
                <value>
                    <fullName>Media Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Menu Printing</fullName>
                </value>
                <value>
                    <fullName>Misc. (requires comment)</fullName>
                </value>
                <value>
                    <fullName>Mobile Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Digital Units Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>Off Premise Consumer Promotion</fullName>
                </value>
                <value>
                    <fullName>Off Premise Display Installation</fullName>
                </value>
                <value>
                    <fullName>Off Premise POS</fullName>
                </value>
                <value>
                    <fullName>Off Premise Sampling</fullName>
                </value>
                <value>
                    <fullName>Off Premise - Trade Event</fullName>
                </value>
                <value>
                    <fullName>Off Premise Value Added Packaging (VAP)</fullName>
                </value>
                <value>
                    <fullName>Off Trade Incentive</fullName>
                </value>
                <value>
                    <fullName>Online Video Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>On Premise Consumer Promotion</fullName>
                </value>
                <value>
                    <fullName>On Premise Menus</fullName>
                </value>
                <value>
                    <fullName>On Premise POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>