SFUSA/force-app/main/default/objects/Program__c/fields/StartDate__c.field-meta.xml
<CustomField>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>