SFUSA/force-app/main/default/objects/Program__c/fields/YTDActual__c.field-meta.xml
<CustomField>
        <fullName>YTDActual__c</fullName>
        <formula>SourceBICampaign__r.ActualCampaignSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>