SFUSA/force-app/main/default/objects/Program__c/recordTypes/Brand_Investment_Programs.recordType-meta.xml
<RecordType>
        <fullName>Brand_Investment_Programs</fullName>
        <active>true</active>
        <description>Programs funded by Brand Investment like Sampling, POS, Incentives, etc.</description>
        <label>Brand Investment Program</label>
    </RecordType>