SFUSA/force-app/main/default/objects/Program__c/recordTypes/EG_or_LMF_Programs.recordType-meta.xml
<RecordType>
        <fullName>EG_or_LMF_Programs</fullName>
        <active>true</active>
        <description>EG or LMF Programs.</description>
        <label>EG or LMF Program</label>
    </RecordType>