SFUSA/force-app/main/default/objects/Program__c/recordTypes/LocalPriority.recordType-meta.xml
<RecordType>
        <fullName>LocalPriority</fullName>
        <active>true</active>
        <description>All local priorities driven by Sales Strategy.</description>
        <label>Focus Calendar Local Priority</label>
    </RecordType>