SFUSA/force-app/main/default/objects/Program__c/recordTypes/National_Priority.recordType-meta.xml
<RecordType>
        <fullName>National_Priority</fullName>
        <active>true</active>
        <description>All national priorities driven by Sales Strategy.</description>
        <label>Focus Calendar National Priority</label>
    </RecordType>