SFUSA/force-app/main/default/objects/Program__c/validationRules/Program_Date_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>Program_Date_Validation</fullName>
        <active>true</active>
        <description>Start Date of the Program must be prior or equal to End Date.</description>
        <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
        <errorMessage>Start Date must be prior or equal to End Date. Please update the Start or End Date.</errorMessage>
    </ValidationRule>