SFUSA/force-app/main/default/objects/Program__c/validationRules/Start_Year_must_be_equal_to_End_Year.validationRule-meta.xml
<ValidationRule>
        <fullName>Start_Year_must_be_equal_to_End_Year</fullName>
        <active>true</active>
        <description>Program Start Date Year must be equal to End Date year.</description>
        <errorConditionFormula>Year(StartDate__c)  &lt;&gt; Year(EndDate__c)</errorConditionFormula>
        <errorMessage>Program Start Date year must be equal to End Date Year. Please update the Start or End Date.</errorMessage>
    </ValidationRule>