SFUSA/force-app/main/default/objects/Program__c/listViews/Activation_Program.listView-meta.xml
<ListView>
        <fullName>Activation_Program</fullName>
        <filterScope>Queue</filterScope>
        <label>Activation</label>
        <queue>Activation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>