SFUSA/force-app/main/default/objects/Program__c/listViews/Alaska_Program.listView-meta.xml
<ListView>
        <fullName>Alaska_Program</fullName>
        <filterScope>Queue</filterScope>
        <label>Alaska</label>
        <queue>Alaska</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>